# msp-rust

./: Cargo.toml  README.md
src/: errors.rs  event_bus.rs  events.rs  lib.rs  main.rs  models.rs  session.rs  state.rs
src/client/: builder.rs  cookies.rs  http.rs  mod.rs  stealth.rs
src/client/endpoints/: attributes.rs  auth.rs  collects.rs  comments.rs  greetings.rs  highscores.rs  messaging.rs  mod.rs  profiles.rs  quests.rs  reservations.rs  ugcs.rs
