[package]
name = "msp-rust"
version = "0.1.1"
edition = "2021"

[profile.dev]
opt-level = 1
debug = "limited"
incremental = true

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = 3
lto = "thin" 
codegen-units = 16
strip = "symbols"
incremental = false

[profile.test]
opt-level = 1
debug = "limited"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
httpdate = "1"

wreq = { version = "6.0.0-rc.29", features = [ # DO NOT CHAAANGE
    "json",
    "cookies",
    "gzip",
    "brotli",
    "zstd",
    "ws"
] } 
wreq-util = "3.0.0-rc.14"

rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_urlencoded = "0.7"
thiserror = "2"
base64 = "0.22"
bson = "2"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures-util      = "0.3"
rustls            = { version = "0.23", features = ["ring"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio       = { version = "1", features = ["full", "test-util"] }
tokio-test  = "0.4"
wiremock    = "0.6"
